layout issue due to elements too wide. fixed footer mostly

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -125,5 +125,5 @@ table {
 
 .App {
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 }
